chore: update deps

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
       "es2018"
     ],
     "skipLibCheck": true,
-    "strict": true,
+    "strict": false,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "jsx": "react",
