chore: update pkg

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,20 +13,14 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "jsx": "react",
-    "sourceMap": false,
+    "sourceMap": true,
     "stripInternal": true,
     "declaration": true,
     "declarationMap": true,
     "declarationDir": "dist/types",
     "outDir": "dist/esm5",
     "resolveJsonModule": true,
-    "importHelpers": true,
-    "plugins": [
-      {
-        "name": "typescript-tslint-plugin",
-        "alwaysShowRuleFailuresAsWarnings": false
-      }
-    ]
+    "importHelpers": true
   },
   "include": [
     "./src"
