--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,6 +2,8 @@
   "extends": [
     "config:base"
   ],
+  "branchPrefix": "renovate-",
+  "baseBranches": ["develop"],
   "assigneesFromCodeOwners": true,
   "packageRules": [
     {
