chore: update build and code deps

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,10 +17,11 @@
     "stripInternal": true,
     "declaration": true,
     "declarationMap": true,
-    "declarationDir": "dist/types",
-    "outDir": "dist/esm5",
+    "declarationDir": "./dist",
+    "outDir": "dist",
     "resolveJsonModule": true,
-    "importHelpers": true
+    "importHelpers": true,
+    "rootDir": "./src"
   },
   "include": [
     "./src"
