--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   ],
   "sideEffects": false,
   "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "typings": "./dist/index.d.ts",
   "files": [
     "dist"
