--- a/package.json
+++ b/package.json
@@ -17,19 +17,19 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/devmehq/react-qr-code.git"
+    "url": "https://github.com/devmehq/react-qr-code.git"
   },
   "license": "MIT",
   "author": {
-    "name": "Mohamed Meabed",
-    "email": "mo@meabed.com",
-    "url": "https://meabed.com"
+    "name": "DEV.ME Team",
+    "email": "support@dev.me",
+    "url": "https://devme.com"
   },
   "maintainers": [
     {
-      "name": "Mohamed Meabed",
-      "email": "mo@meabed.com",
-      "url": "https://meabed.com"
+      "name": "DEV.ME Team",
+      "email": "support@dev.me",
+      "url": "https://devme.com"
     }
   ],
   "sideEffects": false,
@@ -43,55 +43,43 @@
     "build": "rollup -c rollup.config.mjs",
     "build:prod": "NODE_ENV=production rollup -c rollup.config.mjs",
     "lint-js": "eslint src/**/*.ts",
+    "prepare": "yarn husky install",
     "prepublishOnly": "rm -rf dist/* && NODE_ENV=production rollup -c rollup.config.mjs",
     "prettier": "prettier --write '**/*.{ts,tsx,css,scss}'",
-    "test": "echo \"Error: no test specified\" && exit 0",
+    "test": "echo \"Error: no test specified\"",
     "test-watch": "jest --watch"
   },
   "lint-staged": {
-    "**/*.{ts,tsx,js,jsx,css,scss,sass,less,md}": [
-      "prettier --write",
-      "git add"
-    ],
-    "src/**/*.{ts,tsx}": [
-      "npm run lint:fix",
-      "git add"
-    ]
-  },
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
+    "src/*.{ts,tsx,js,jsx}": "prettier --write",
+    "__tests__/*.{ts,tsx,js,jsx}": "prettier --write"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "3.7.1",
     "@rollup/plugin-commonjs": "24.0.0",
     "@rollup/plugin-node-resolve": "15.0.1",
     "@rollup/plugin-replace": "5.0.2",
-    "@rollup/plugin-typescript": "10.0.1",
+    "@rollup/plugin-typescript": "11.0.0",
     "@types/jasmine": "4.3.1",
-    "@types/jest": "29.2.4",
+    "@types/jest": "29.2.5",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
-    "@typescript-eslint/eslint-plugin": "5.47.1",
-    "@typescript-eslint/parser": "5.47.1",
-    "eslint": "8.30.0",
-    "eslint-config-prettier": "8.5.0",
+    "@typescript-eslint/eslint-plugin": "5.48.2",
+    "@typescript-eslint/parser": "5.48.2",
+    "eslint": "8.32.0",
+    "eslint-config-prettier": "8.6.0",
+    "husky": "8.0.3",
     "jest": "29.3.1",
-    "prettier": "2.8.1",
-    "rollup": "3.9.0",
+    "lint-staged": "13.1.0",
+    "prettier": "2.8.3",
+    "pretty-quick": "3.1.3",
+    "rollup": "3.10.0",
     "rollup-plugin-uglify": "6.0.4",
-    "ts-jest": "29.0.3",
+    "ts-jest": "29.0.5",
     "tslib": "2.4.1",
     "typescript": "4.9.4"
   },
   "peerDependencies": {
     "react": ">=17.0.2",
     "react-dom": ">=17.0.2"
-  },
-  "engines": {
-    "node": ">=8.5",
-    "npm": ">=6.0",
-    "yarn": "^1.0"
   }
 }
