feat: comprehensive QR code library improvements with advanced customization
Major Enhancements:
- 🎨 Added AdvancedQRCode component with 100+ customization options
- 🔧 Migrated to TypeScript with strict mode for better type safety
- ✨ Implemented 12+ eye shapes, 18+ body patterns, and background effects
- 🎭 Added preset themes (neon, cyberpunk, nature, vintage, modern)
- 🧪 Added comprehensive test suite with 116 tests and QR detectability validation
- 📱 Added QR code decoder functionality for validation
- 🚀 Modernized codebase to ES6+ classes and React hooks

Features Added:
- Eye customization: multiple shapes (circle, leaf, star, diamond, etc.) with gradients
- Body customization: fluid connections, patterns, density control
- Background patterns: dots, grid, waves, gradients with 12+ options
- Color effects: shadow, glow, neon, holographic, metallic
- Template support: WiFi, vCard, SMS, email, phone
- Export formats: SVG, PNG, JPEG, PDF with customizable quality
- Performance optimizations: lazy loading, memoization, debouncing

Testing & Quality:
- Full test coverage with Jest and React Testing Library
- QR code detectability testing with contrast validation
- All themes meet minimum 3:1 contrast ratio (most exceed 7:1)
- SVG extraction and validation scripts
- Fixed all TypeScript errors and warnings

Breaking Changes:
- Removed legacy function-based components
- Updated to React 19 and modern testing libraries
- Restructured file organization for better maintainability

Documentation:
- Added comprehensive API documentation
- Created interactive demos with 100+ examples
- Added detectability testing tools
- Included advanced usage examples

--- a/package.json
+++ b/package.json
@@ -33,21 +33,34 @@
     }
   ],
   "sideEffects": false,
-  "main": "./dist/index.js",
+  "main": "./dist/index.cjs.js",
+  "module": "./dist/index.esm.js",
+  "unpkg": "./dist/index.umd.js",
   "types": "./dist/index.d.ts",
   "typings": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.esm.js",
+      "require": "./dist/index.cjs.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "files": [
     "dist"
   ],
   "scripts": {
     "build": "rollup -c rollup.config.mjs",
     "build:prod": "NODE_ENV=production rollup -c rollup.config.mjs",
-    "lint-js": "eslint src/**/*.ts",
+    "build:watch": "rollup -c rollup.config.mjs --watch",
+    "lint": "eslint src/**/*.{ts,tsx}",
+    "lint:fix": "eslint src/**/*.{ts,tsx} --fix",
+    "typecheck": "tsc --noEmit",
     "prepare": "yarn husky install",
-    "prepublishOnly": "rm -rf dist/* && NODE_ENV=production rollup -c rollup.config.mjs",
+    "prepublishOnly": "rm -rf dist/* && yarn test && NODE_ENV=production rollup -c rollup.config.mjs",
     "prettier": "prettier --write '**/*.{ts,tsx,css,scss}'",
-    "test": "echo \"Error: no test specified\"",
-    "test-watch": "jest --watch"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "lint-staged": {
     "src/*.{ts,tsx,js,jsx}": "prettier --write",
@@ -58,7 +71,11 @@
     "@rollup/plugin-commonjs": "28.0.6",
     "@rollup/plugin-node-resolve": "16.0.1",
     "@rollup/plugin-replace": "6.0.2",
+    "@rollup/plugin-terser": "0.4.4",
     "@rollup/plugin-typescript": "12.1.4",
+    "@testing-library/dom": "10.4.1",
+    "@testing-library/jest-dom": "6.1.5",
+    "@testing-library/react": "16.3.0",
     "@types/jasmine": "5.1.9",
     "@types/jest": "30.0.0",
     "@types/react": "19.1.10",
@@ -69,11 +86,17 @@
     "eslint-config-prettier": "10.1.8",
     "husky": "9.1.7",
     "jest": "30.0.5",
+    "jest-environment-jsdom": "29.7.0",
     "lint-staged": "16.1.5",
     "prettier": "3.6.2",
     "pretty-quick": "4.2.2",
+    "puppeteer": "24.16.2",
+    "qr-scanner": "1.4.2",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "rollup": "4.46.3",
-    "rollup-plugin-uglify": "6.0.4",
+    "rollup-plugin-peer-deps-external": "2.2.4",
+    "rollup-plugin-visualizer": "5.12.0",
     "ts-jest": "29.4.1",
     "tslib": "2.8.1",
     "typescript": "5.9.2"
