--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,14 +2,17 @@
   "compilerOptions": {
     "moduleResolution": "node",
     "module": "esnext",
-    "target": "es5",
-    "noImplicitAny": false,
-    "lib": [
-      "dom",
-      "es2018"
-    ],
+    "target": "es2018",
+    "noImplicitAny": true,
+    "lib": ["dom", "es2018", "dom.iterable"],
     "skipLibCheck": true,
-    "strict": false,
+    "strict": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "strictBindCallApply": true,
+    "strictPropertyInitialization": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "jsx": "react",
@@ -21,10 +24,18 @@
     "outDir": "dist",
     "resolveJsonModule": true,
     "importHelpers": true,
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "allowSyntheticDefaultImports": true
   },
-  "include": [
-    "./src"
+  "include": ["./src"],
+  "exclude": [
+    "./src/**/*.test.*",
+    "./src/**/__tests__/**/*",
+    "./src/**/*.spec.*"
   ],
   "compileOnSave": false
 }
