docs: enhance documentation with comprehensive examples and screenshots
- Add detailed EXAMPLES.md with complete usage guide
- Update README with live demo links and example gallery
- Add screenshots of all example pages and QR styles
- Reorganize test files into test/e2e directory structure
- Add instructions for viewing HTML examples locally
- Include CodeSandbox and StackBlitz playground links
- Document all 25+ preset themes and 100+ customization options
- Add mobile testing instructions and detectability guidelines
- Create capture-screenshots script for automated documentation
- Update examples README with better navigation and screenshots

--- a/.gitignore
+++ b/.gitignore
@@ -23,5 +23,5 @@ dist
 package
 
 ## test outputs
-test/svg-detectability/*.svg
-test/svg-detectability/detectability-report.json
+test/e2e/*.svg
+test/e2e/detectability-report.json
