--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@devmehq/react-qr-code",
   "version": "1.0.9",
-  "private": false,
   "description": "React component to generate QR codes",
   "keywords": [
     "react",
@@ -43,7 +42,7 @@
     "build": "rollup -c rollup.config.mjs",
     "build:prod": "NODE_ENV=production rollup -c rollup.config.mjs",
     "lint-js": "eslint src/**/*.ts",
-    "prepare": "yarn husky install",
+    "prepare": "husky",
     "prepublishOnly": "rm -rf dist/* && NODE_ENV=production rollup -c rollup.config.mjs",
     "prettier": "prettier --write '**/*.{ts,tsx,css,scss}'",
     "test": "echo \"Error: no test specified\"",
@@ -63,13 +62,13 @@
     "@types/jest": "30.0.0",
     "@types/react": "19.1.12",
     "@types/react-dom": "19.1.9",
-    "@typescript-eslint/eslint-plugin": "8.41.0",
-    "@typescript-eslint/parser": "8.41.0",
-    "eslint": "9.34.0",
+    "@typescript-eslint/eslint-plugin": "8.42.0",
+    "@typescript-eslint/parser": "8.42.0",
+    "eslint": "9.35.0",
     "eslint-config-prettier": "10.1.8",
     "husky": "9.1.7",
-    "jest": "30.1.1",
-    "lint-staged": "16.1.5",
+    "jest": "30.1.3",
+    "lint-staged": "16.1.6",
     "prettier": "3.6.2",
     "pretty-quick": "4.2.2",
     "rollup": "4.50.0",
@@ -81,5 +80,6 @@
   "peerDependencies": {
     "react": ">=17.0.2",
     "react-dom": ">=17.0.2"
-  }
+  },
+  "packageManager": "yarn@1.22.21"
 }
